Set up CI with Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- script: docker -v
 - task: DockerCompose@0
   inputs:
     containerregistrytype: 'Container Registry'
