--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
 - script: docker run -d --name selenoid -p 4444:4444 -v /var/run/docker.sock:/var/run/docker.sock
     -v $PWD/config/:/etc/selenoid/:ro aerokube/selenoid
 
-- script: echo Hello, world!
+- script: curl http://localhost:4444/status
   displayName: 'Run a one-line script'
 
 - script: |
